@@ -14,12 +14,15 @@
 
 namespace Castle.MicroKernel.Lifestyle
 {
+	using System;
+	using System.Threading;
+
 	using Castle.MicroKernel.Context;
 	using Castle.MicroKernel.Lifestyle.Scoped;
 
 	public class ScopedLifestyleManager : AbstractLifestyleManager
 	{
-		private readonly IScopeAccessor accessor;
+		private IScopeAccessor accessor;
 
 		public ScopedLifestyleManager()
 			: this(new LifetimeScopeAccessor())
@@ -33,12 +36,21 @@ namespace Castle.MicroKernel.Lifestyle
 
 		public override void Dispose()
 		{
-			accessor.Dispose();
+			var scope = Interlocked.Exchange(ref accessor, null);
+			if (scope != null)
+			{
+				scope.Dispose();
+			}
 		}
 
 		public override object Resolve(CreationContext context, IReleasePolicy releasePolicy)
 		{
-			var scope = accessor.GetScope(context);
+			var localScope = accessor;
+			if(localScope == null)
+			{
+				throw new ObjectDisposedException("Scope was already disposed. This is most likely a bug in the calling code.");
+			}
+			var scope = localScope.GetScope(context);
 			var burden = scope.GetCachedInstance(Model, afterCreated =>
 			{
 				var localBurden = base.CreateInstance(context, trackedExternally: true);
